fix(purchase-bills): align purchase table columns

--- a/apps/next/src/app/globals.css
+++ b/apps/next/src/app/globals.css
@@ -517,6 +517,15 @@ table.ns-table > thead > tr > th[data-column-align="right"]:not([colspan]) > :is
   text-align: right !important;
 }
 
+table.ns-table > thead > tr > th.ns-table-money-header:not([colspan]) {
+  text-align: right !important;
+}
+
+table.ns-table > thead > tr > th.ns-table-money-header:not([colspan]) > :is(.flex, .inline-flex, button) {
+  justify-content: flex-end !important;
+  text-align: right !important;
+}
+
 table.ns-table > :is(tbody, tfoot) > tr > :is(th, td):not([colspan]) {
   text-align: left !important;
 }
